# GQuestRedux

./: .gitignore  first-time-startup.sh
documentation/: ai_summary.txt  arch_gen.sh  architecture.md  rending formulas.md
libs/gcurses/: CMakeLists.txt  demo  demo.c  demo.d  makefile
libs/gcurses/include/: gcurses.h
libs/gcurses/rust_src/: lib.rs
libs/gcurses/src/: gcurses.c
libs/gio/include/: gio.h
libs/gio/src/: cli_input.c
libs/objects/src/: oop.c
scripts/: build-boot.sh  build-editor.sh  build-game.sh
src/: CMakeLists.txt
src/devstudio/: bootmenu.c
src/editor/: chunk_operations.c  editor.c  editor.h  editor_window.c  rendering_ops.c  sdl2init.c
src/game/: game.c
src/renderer/: CMakeLists.txt  editor.h  editor_window.c  legacy_functions.c  render.c  render.h  rendering_ops.c
world_data/: _0_-1_.ck  _0_0_.ck
